# runbot

./: .gitignore  Cargo.toml  README.md
runbot/: Cargo.toml
runbot-codegen/: Cargo.toml  README.md
runbot-codegen/src/: lib.rs
runbot/examples/: client.rs  command_test.rs  demo_processor_fn.rs  server.rs
runbot/src/: bot_context.rs  command.rs  common.rs  connection.rs  error.rs  event.rs  lib.rs  module.rs  process.rs  re_export.rs
runbot/src/onebot11_api/: account_logout.rs  batch_kick_group_member.rs  can_send_image.rs  can_send_record.rs  clear_cache.rs  click_button.rs  create_favorite.rs  create_group_file_folder.rs  delete_essence_msg.rs  delete_friend.rs  delete_group_file.rs  delete_group_folder.rs  delete_group_notice.rs  delete_msg.rs  download_file_to_cache.rs  forward_friend_single_msg.rs  forward_group_single_msg.rs  friend_poke.rs  get_account_info.rs  get_ai_voice.rs  get_ai_voice_person.rs  get_bot_account_range.rs  get_clientkey.rs  get_cookies.rs  get_credentials.rs  get_csrf_token.rs  get_essence_msg_list.rs  get_favorite_face.rs  get_file_info.rs  get_filtered_friend_requests.rs  get_forward_msg.rs  get_friend_group_list.rs  get_friend_list.rs  get_group_at_all_remain.rs  get_group_ban_list.rs  get_group_file_system_info.rs  get_group_file_url.rs  get_group_files_by_folder.rs  get_group_filter_system_msg.rs  get_group_history_msg.rs  (+80 more)
