[package]
name = "runbot-codegen"
version.workspace = true
edition = "2024"
description = "QQ client framework"
license = "MPL-2.0"
repository = "https://github.com/niuhuan/runbot"

[dependencies]
convert_case = "0.8"
darling = "0.20"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
proc-macro2-diagnostics = "0.10"
quote = "1.0"
regex = "1.11"
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true
